--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,32 +8,6 @@
     android:layout_height="match_parent"
     tools:context="com.newrdev.photolibrary.ui.home.HomeActivity">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="384dp"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp"
-        android:id="@+id/appBarLayout"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.constraint.Guideline
-        android:layout_width="384dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline2"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.49902153"
-        tools:layout_editor_absoluteY="255dp"
-        tools:layout_editor_absoluteX="0dp" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,7 +19,9 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
         android:gravity="center_vertical|center_horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        android:textSize="@dimen/home_title_text_size"
+        android:layout_marginTop="16dp" />
 
     <RelativeLayout
         android:layout_width="0dp"
@@ -55,13 +31,13 @@
         android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/cloudTextView"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/relativeLayout">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/cloudRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical" />
+            android:layout_height="wrap_content" />
 
         <ProgressBar
             android:layout_width="wrap_content"
@@ -84,9 +60,10 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline2"
-        android:layout_marginTop="16dp"
-        android:gravity="center_vertical|center_horizontal" />
+        android:gravity="center_vertical|center_horizontal"
+        android:textSize="@dimen/home_title_text_size"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 
 
     <RelativeLayout
@@ -102,8 +79,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/localRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical" />
+            android:layout_height="wrap_content" />
 
         <ProgressBar
             android:layout_width="wrap_content"
@@ -114,7 +90,33 @@
             android:id="@+id/progressBarLocal"
             style="?android:attr/progressBarStyle" />
 
+        <TextView
+            android:id="@+id/localEmptyTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:visibility="gone"
+            android:text="@string/local_photos_default_message" />
+
     </RelativeLayout>
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteY="0dp"
+        android:id="@+id/appBarLayout"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </android.support.design.widget.AppBarLayout>
 
 
 </android.support.constraint.ConstraintLayout>
