Forgot to commit UI for last commit

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,6 +48,16 @@
             android:id="@+id/progressBarAlbum"
             style="?android:attr/progressBarStyle" />
 
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:textColor="@color/colorPrimary"
+            android:text="Retry"
+            android:visibility="gone"
+            android:id="@+id/retryCloudFetchButton"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
     <TextView
